finished core function of the app (it now shows cat breeds and their stats correctly).

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 1
+      Cat List
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,9 +9,40 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
+      <ion-title size="large">Cat List</ion-title>
     </ion-toolbar>
   </ion-header>
+  <ion-list>
+    <ion-card *ngFor="let cat of cats$ | async">
+      <img alt="Cat Image" src="{{cat.image_link}}"/>
+      <ion-card-header>
+        <ion-card-title>{{ cat.name }} Cat</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-label>Shedding</ion-label>
+        <ion-progress-bar [value]="cat.shedding / 5" [color]="getBarColor(cat.shedding, true)"></ion-progress-bar>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+        <ion-label>Family Friendliness</ion-label>
+        <ion-progress-bar [value]="cat.family_friendly / 5"
+                          [color]="getBarColor(cat.family_friendly, false)"></ion-progress-bar>
+
+        <ion-label>Playfulness</ion-label>
+        <ion-progress-bar [value]="cat.playfulness / 5"
+                          [color]="getBarColor(cat.playfulness, false)"></ion-progress-bar>
+
+        <ion-label>Other Pets Friendly</ion-label>
+        <ion-progress-bar [value]="cat.pets_friendly / 5"
+                          [color]="getBarColor(cat.pets_friendly, false)"></ion-progress-bar>
+
+        <ion-label>Children Friendly</ion-label>
+        <ion-progress-bar [value]="cat.children_frienly / 5"
+                          [color]="getBarColor(cat.children_frienly, false)"></ion-progress-bar>
+
+
+        <ion-input label="Origin" labelPlacement="stacked" value="{{cat.origin}}" [readonly]="true"></ion-input>
+        <ion-input label="Length" labelPlacement="stacked" value="{{cat.length}}" [readonly]="true"></ion-input>
+      </ion-card-content>
+    </ion-card>
+  </ion-list>
+
 </ion-content>
