--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -13,7 +13,7 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Cat List</ion-title>
+      <ion-title size="large">Hello {{username()}}!</ion-title>
     </ion-toolbar>
   </ion-header>
   <ion-list>
