--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,7 +1,7 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
     <ion-title>
-      Tab 2
+      Favorites
     </ion-title>
   </ion-toolbar>
 </ion-header>
@@ -9,8 +9,10 @@
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
     <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
+      <ion-title size="large">Favorites</ion-title>
     </ion-toolbar>
   </ion-header>
+
+  <ion-title>Under Development</ion-title>
 
 </ion-content>
