--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -15,12 +15,8 @@
 
   <ion-list>
     <ion-item>
-      <ion-input labelPlacement="stacked" label="Username" placeholder="Empty"></ion-input>
+      <ion-input (ionChange)="saveUserName($event)"  labelPlacement="stacked" label="Username" [placeholder]="username()"></ion-input>
     </ion-item>
   </ion-list>
-  <div class="ion-padding ion-text-center">
-    <ion-button fill="clear">Reset Settings</ion-button>
-    <ion-button>Save Settings</ion-button>
-  </div>
 
 </ion-content>
