--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -15,8 +15,18 @@
 
   <ion-list>
     <ion-item>
-      <ion-input (ionChange)="saveUserName($event)"  labelPlacement="stacked" label="Username" [placeholder]="username()"></ion-input>
+      <ion-input (ionChange)="saveUserName($event)" labelPlacement="stacked" label="Username"
+                 [placeholder]="username()"></ion-input>
     </ion-item>
   </ion-list>
+  <div class="ion-padding ion-float-right">
+    <ion-button color="danger" id="clear-all" fill="clear">Reset to Default</ion-button>
+  </div>
+
+  <ion-alert
+    trigger="clear-all"
+    header="Clear All Settings?"
+    [buttons]="alertButtons"
+  ></ion-alert>
 
 </ion-content>
