--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -16,39 +16,49 @@
       <ion-title size="large">Hello {{ username() }}!</ion-title>
     </ion-toolbar>
   </ion-header>
-  <ion-list>
-    <ion-card *ngFor="let cat of cats$ | async">
-      <img alt="Cat Image" src="{{cat.image_link}}"/>
-      <ion-card-header>
-        <ion-card-title>{{ cat.name }} Cat</ion-card-title>
-      </ion-card-header>
-      <ion-card-content>
-        <ion-label>Shedding</ion-label>
-        <ion-progress-bar [value]="cat.shedding / 5" [color]="getBarColor(cat.shedding, true)"></ion-progress-bar>
 
-        <ion-label>Family Friendliness</ion-label>
-        <ion-progress-bar [value]="cat.family_friendly / 5"
-                          [color]="getBarColor(cat.family_friendly, false)"></ion-progress-bar>
+  <ng-container *ngIf="(cats$ | async) as cats">
+    <div *ngIf="cats.length === 0"
+         style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%;">
+      <ion-spinner></ion-spinner>
+      <ion-text color="medium">
+        <p style="margin-top: 0.5rem;">Loading cats...</p>
+      </ion-text>
+    </div>
 
-        <ion-label>Playfulness</ion-label>
-        <ion-progress-bar [value]="cat.playfulness / 5"
-                          [color]="getBarColor(cat.playfulness, false)"></ion-progress-bar>
+    <ion-list *ngIf="cats.length > 0">
+      <ion-card *ngFor="let cat of cats">
+        <img alt="Cat Image" src="{{cat.image_link}}"/>
+        <ion-card-header>
+          <ion-card-title>{{ cat.name }} Cat</ion-card-title>
+        </ion-card-header>
+        <ion-card-content>
+          <ion-label>Shedding</ion-label>
+          <ion-progress-bar [value]="cat.shedding / 5" [color]="getBarColor(cat.shedding, true)"></ion-progress-bar>
 
-        <ion-label>Other Pets Friendly</ion-label>
-        <ion-progress-bar [value]="cat.pets_friendly / 5"
-                          [color]="getBarColor(cat.pets_friendly, false)"></ion-progress-bar>
+          <ion-label>Family Friendliness</ion-label>
+          <ion-progress-bar [value]="cat.family_friendly / 5"
+                            [color]="getBarColor(cat.family_friendly, false)"></ion-progress-bar>
 
-        <ion-label>Children Friendly</ion-label>
-        <ion-progress-bar [value]="cat.children_friendly / 5"
-                          [color]="getBarColor(cat.children_friendly, false)"></ion-progress-bar>
+          <ion-label>Playfulness</ion-label>
+          <ion-progress-bar [value]="cat.playfulness / 5"
+                            [color]="getBarColor(cat.playfulness, false)"></ion-progress-bar>
 
+          <ion-label>Other Pets Friendly</ion-label>
+          <ion-progress-bar [value]="cat.pets_friendly / 5"
+                            [color]="getBarColor(cat.pets_friendly, false)"></ion-progress-bar>
 
-        <ion-input label="Origin" labelPlacement="stacked" value="{{cat.origin}}" [readonly]="true"></ion-input>
-        <ion-input label="Length" labelPlacement="stacked" value="{{cat.length}}" [readonly]="true"></ion-input>
-      </ion-card-content>
-      <ion-button (click)="handleFavorites(cat.name)" fill="clear">Add to favorites</ion-button>
-    </ion-card>
-  </ion-list>
+          <ion-label>Children Friendly</ion-label>
+          <ion-progress-bar [value]="cat.children_friendly / 5"
+                            [color]="getBarColor(cat.children_friendly, false)"></ion-progress-bar>
+
+          <ion-input label="Origin" labelPlacement="stacked" value="{{cat.origin}}" [readonly]="true"></ion-input>
+          <ion-input label="Length" labelPlacement="stacked" value="{{cat.length}}" [readonly]="true"></ion-input>
+        </ion-card-content>
+        <ion-button (click)="handleFavorites(cat.name)" fill="clear">Add to favorites</ion-button>
+      </ion-card>
+    </ion-list>
+  </ng-container>
 
 
   <ion-infinite-scroll threshold="30%" (ionInfinite)="onIonInfinite($event)">
