--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -16,14 +16,25 @@
       <ion-title size="large">Hello {{ username() }}!</ion-title>
     </ion-toolbar>
   </ion-header>
-
+  <!--
+  @if (cats$ | async; as cats) {
+    @for (cat of cats; track cat.id) {
+      // zde zobrazuji data, řádky
+    } @empty {
+      // nic nenalezeno
+    }
+  } @else {
+    // loader
+  }
+  -->
+  <div></div>
   <ng-container *ngIf="(cats$ | async) as cats">
     <div *ngIf="cats.length === 0"
          style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%; padding: 1rem; text-align: center;">
       <ion-spinner></ion-spinner>
       <ion-text color="medium">
         <p style="margin-top: 0.5rem;">Loading cats...</p>
-        <p style="max-width: 90%; word-wrap: break-word; overflow-wrap: break-word;">{{advice.advice}}</p>
+        <p style="word-wrap: break-word; overflow-wrap: break-word;">{{ advice.advice }}</p>
       </ion-text>
     </div>
 
