--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -13,43 +13,40 @@
     </ion-toolbar>
   </ion-header>
 
-  <ng-container *ngIf="(favCatObjects$ | async) as cats">
-    <ion-list *ngIf="cats.length > 0; else noFavorites">
-      <ion-card *ngFor="let cat of cats">
-        <img alt="Cat Image" [src]="cat.image_link"/>
-        <ion-card-header>
-          <ion-card-title>{{ cat.name }} Cat</ion-card-title>
-        </ion-card-header>
-        <ion-card-content>
-          <ion-label>Shedding</ion-label>
-          <ion-progress-bar [value]="cat.shedding / 5" [color]="getBarColor(cat.shedding, true)"></ion-progress-bar>
-
-          <ion-label>Family Friendliness</ion-label>
-          <ion-progress-bar [value]="cat.family_friendly / 5"
-                            [color]="getBarColor(cat.family_friendly, false)"></ion-progress-bar>
-
-          <ion-label>Playfulness</ion-label>
-          <ion-progress-bar [value]="cat.playfulness / 5"
-                            [color]="getBarColor(cat.playfulness, false)"></ion-progress-bar>
-
-          <ion-label>Other Pets Friendly</ion-label>
-          <ion-progress-bar [value]="cat.pets_friendly / 5"
-                            [color]="getBarColor(cat.pets_friendly, false)"></ion-progress-bar>
-
-          <ion-label>Children Friendly</ion-label>
-          <ion-progress-bar [value]="cat.children_friendly / 5"
-                            [color]="getBarColor(cat.children_friendly, false)"></ion-progress-bar>
-
-          <ion-input label="Origin" labelPlacement="stacked" [value]="cat.origin" [readonly]="true"></ion-input>
-          <ion-input label="Length" labelPlacement="stacked" [value]="cat.length" [readonly]="true"></ion-input>
-        </ion-card-content>
-        <ion-button (click)="removeFromFavorites(cat.name)" color="danger" fill="clear">
-          Remove From Favorites
-        </ion-button>
-      </ion-card>
-    </ion-list>
-
-    <ng-template #noFavorites>
+  @if ((favCatObjects$ | async); as cats) {
+    @if (cats.length > 0) {
+      <ion-list>
+        @for (cat of cats; track cat) {
+          <ion-card>
+            <img alt="Cat Image" [src]="cat.image_link"/>
+            <ion-card-header>
+              <ion-card-title>{{ cat.name }} Cat</ion-card-title>
+            </ion-card-header>
+            <ion-card-content>
+              <ion-label>Shedding</ion-label>
+              <ion-progress-bar [value]="cat.shedding / 5" [color]="getBarColor(cat.shedding, true)"></ion-progress-bar>
+              <ion-label>Family Friendliness</ion-label>
+              <ion-progress-bar [value]="cat.family_friendly / 5"
+              [color]="getBarColor(cat.family_friendly, false)"></ion-progress-bar>
+              <ion-label>Playfulness</ion-label>
+              <ion-progress-bar [value]="cat.playfulness / 5"
+              [color]="getBarColor(cat.playfulness, false)"></ion-progress-bar>
+              <ion-label>Other Pets Friendly</ion-label>
+              <ion-progress-bar [value]="cat.pets_friendly / 5"
+              [color]="getBarColor(cat.pets_friendly, false)"></ion-progress-bar>
+              <ion-label>Children Friendly</ion-label>
+              <ion-progress-bar [value]="cat.children_friendly / 5"
+              [color]="getBarColor(cat.children_friendly, false)"></ion-progress-bar>
+              <ion-input label="Origin" labelPlacement="stacked" [value]="cat.origin" [readonly]="true"></ion-input>
+              <ion-input label="Length" labelPlacement="stacked" [value]="cat.length" [readonly]="true"></ion-input>
+            </ion-card-content>
+            <ion-button (click)="removeFromFavorites(cat.name)" color="danger" fill="clear">
+              Remove From Favorites
+            </ion-button>
+          </ion-card>
+        }
+      </ion-list>
+    } @else {
       <div style="display: flex; flex-direction: column; align-items: center; justify-content: center; height: 100%;">
         <ion-text color="medium">
           <p style="text-align: center; margin: 0 1rem;">
@@ -58,6 +55,6 @@
           </p>
         </ion-text>
       </div>
-    </ng-template>
-  </ng-container>
+    }
+  }
 </ion-content>
